# krawler_mpi

./: .gitignore  README.md
src/: CMakeLists.txt  curlhandler.cpp  curlhandler.h  krawlers.cpp  krawlers.hpp  main.cpp  main.hpp  product.cpp  product.hpp  readme.txt
test/: make_charts.py  run.py
